kubernetes/testing/streamripper/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: streamripper
  labels:
    app.kubernetes.io/name: streamripper
    app.kubernetes.io/instance: streamripper
