kubernetes/testing/streamripper/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamripper
  namespace: streamripper
  labels:
    app.kubernetes.io/name: streamripper
    app.kubernetes.io/instance: streamripper
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: streamripper
      app.kubernetes.io/instance: streamripper
  template:
    metadata:
      labels:
        app.kubernetes.io/name: streamripper
        app.kubernetes.io/instance: streamripper
    spec:
      containers:
        - name: streamripper
          image: ghcr.io/maltebiermann/streamripper:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8001
              name: control
              protocol: TCP
          volumeMounts:
            - name: output
              mountPath: /workspace/streamripper/output
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
        - name: output-http
          image: python:3.11-alpine
          command:
            - python
            - -m
            - http.server
            - --directory
            - /srv/output
            - "8080"
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - name: output
              mountPath: /srv/output
      volumes:
        - name: output
          persistentVolumeClaim:
            claimName: streamripper-output
