kubernetes/testing/streamripper/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: streamripper
  namespace: streamripper
  labels:
    app.kubernetes.io/name: streamripper
    app.kubernetes.io/instance: streamripper
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: streamripper
    app.kubernetes.io/instance: streamripper
  ports:
    - name: control
      port: 8001
      targetPort: control
      protocol: TCP
